Thu Jul 21 20:59:59 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (discard_cmsg): workaround for MacOS X Lion.


Thu Jul 21 07:07:57 2011  Tanaka Akira  <akr@fsij.org>

	* backport r32579, r32581, r32587 by akr and r32588 by kazu.

	r32579:

	* io.c (rb_update_max_fd): new function.

	* internal.h (rb_update_max_fd): declare rb_update_max_fd.

	* thread_pthread.c (rb_thread_create_timer_thread): update max fd when
	  timer thread pipe is created.

	r32581:

	* io.c (UPDATE_MAXFD): removed.

	r32587:

	* include/ruby/intern.h (rb_update_max_fd): declaration moved from
	  internal.h.

	* file.c: ditto.

	* io.c: call rb_update_max_fd for each new fds.

	* process.c: ditto.

	* random.c: ditto.

	* ruby.c: ditto.

	* ext/io/console/console.c: ditto.

	* ext/openssl/ossl_bio.c: ditto.

	* ext/pty/pty.c: ditto.

	* ext/socket/init.c: ditto.

	* ext/socket/socket.c: ditto.

	* ext/socket/ancdata.c: ditto.

	* ext/socket/unixsocket.c: ditto.

	r32588:

	* io.c (rb_update_max_fd): remove parentheses. they are not in
	  macro.

Sun Jul 17 08:07:31 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32563 from trunk

	* test/openssl/test_ssl_session.rb: add PEM SSL session without TLS
	  extensions. Use this as the default for the tests to ensure
	  compatibility with OpenSSL 0.9.7.
	  [ Ruby 1.9 - Bug #4961 ] [ruby-core:37726]

Sat Jul 16 17:29:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): restore arch flag.
	  Bug #4977

Sat Jul 16 11:18:26 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: support to build x64-mswin64 on Windows7 (and Vista,
	  perhaps).
	  backported r32521 from trunk

Sat Jul 16 06:31:23 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/uri/common.rb (module): Remove optional parser argument to
	  Kernel#URI
	  [ruby-core:38061]

	* lib/uri/generic.rb (module): ditto

Sat Jul 16 01:15:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
